# hl7v2GenomicsExtractor

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: issue-template.md
docs/: API.rst  Manual.md  QUICKSTART.rst  conf.py  index.rst
hl7v2GenomicsExtractor/: __init__.py  common.py  converter.py  hl7v2_helper.py  hl7v2_message_generator.py
hl7v2GenomicsExtractor/test/: snpEff.hl7v2.txt  snpEff.vcf
