# Changes required for PyPI
[metadata]:
name = hl7v2GenomicsExtractor
version = 0.0.4
description = Convert vcf/xml files to HL7V2 message
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
author = ""
author_email = rohaninjmu@gmail.com
url = https://github.com/HL7V2-Genomics-Conversion-Utilities/hl7v2GenomicsExtractor
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
include_package_data = True
setup_requires =
    setuptools
packages = 
    hl7v2GenomicsExtractor
python_version = >=3.6
install_requires =
    Cython==0.29.35
    hl7apy==1.3.4
    pysam
    pandas
    pytz==2019.3
    pyranges==0.0.96
    xmltodict==0.13.0
    PyVCF3==1.0.3
